base for index.html completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;800&family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
     <link href="./assets/style.css">
 </head>
+
 <body>
-    
+    <main>
+        <article class="container-fluid">
+            <!-- NavBar -->
+            <nav class="row navbar navbar-light bg-light">
+                <div class="col-12 text-center">
+                    <h1>Your Weather Dashboard</h1>
+                </div>
+            </nav>
+
+            <!-- Search Bar Title -->
+            <section class="row">
+                <div class="col-12">
+                    <h4>Search City:</h4>
+                </div>
+            </section>
+
+            <!-- Search Bar Input -->
+            <section class="row">
+                <div class="col-12">
+                    <div class="input-group">
+                        <input type="text" id="cityInput" class="form-control" placeholder="Enter City Name">
+                        <button type="button" id="searchBtn" class="btn btn-info">Search</button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Seach History List -->
+            <section class="row">
+                <div class="col-12">
+                    <!-- list of searched cities -->
+                    <ul id="cityHistory" class="list-group">
+                        <!-- `li` added in js.file -->
+                    </ul>
+                </div>
+            </section>
+
+            <!-- Weather Details -->
+            <section id="weather" class="col-8">
+                <div class="row">
+                    <div id="searchDetails" class="col-12">
+                        <!-- searched city displayed here dynamically through JavaScript -->
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h4>5-Day Forecast:</h4>
+                    </div>
+                </div>
+
+                <div id="forecast" class="row">
+                    <!-- 5-day forecast displayed here -->
+                </div>
+            </section>
+        </article>
+    </main>
+
+    <!-- Script Files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script href="./assets/script.js"></script>
 </body>
 </html>
