JavaScript variables added in first function

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 
             <!-- Weather Details -->
             <section id="weather" class="col-8">
-                <div class="row">
+                <div id="todaysWeather" class="row">
                     <div id="searchDetails" class="col-12">
                         <!-- searched city displayed here dynamically through JavaScript -->
                     </div>
                 </div>
 
-                <div class="row">
+                <div id="futureWeather" class="row">
                     <div class="col-12">
                         <h4>5-Day Forecast:</h4>
                     </div>
