committing work for assistance with BCS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Todays weather displayed -->
             <div class="card">
                 <h4 class="subtitle"><span id="city-search-name"></span></h4>
-                <div class="list-group">
+                <div class="list-group" id="current-forecast-list">
                     <!-- Todays forecast displayed here -->
                 </div>
             </div>
