--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Future weather displayed -->
                 <div class="card">
                     <h4 class="card-header text-center bg-success" style="--bs-bg-opacity: .5;">5-Day Forecast</h4>
-                    <div class="row d-none card-group" id="future-forecast">
+                    <div class="row card-group" id="future-forecast">
                         <div class="bg-success bg-opacity-25" id="dayOne"></div>
                         <div class="bg-success bg-opacity-25" id="dayTwo"></div>
                         <div class="bg-success bg-opacity-25" id="dayThree"></div>
