--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <div class="card">
                     <h4 class="card-header text-center bg-success" style="--bs-bg-opacity: .5;">5-Day Forecast</h4>
                     <div class="row card-group" id="future-forecast">
-                        <div class="bg-success bg-opacity-25" id="dayOne"></div>
+                        <!-- <div class="bg-success bg-opacity-25" id="dayOne"></div>
                         <div class="bg-success bg-opacity-25" id="dayTwo"></div>
                         <div class="bg-success bg-opacity-25" id="dayThree"></div>
                         <div class="bg-success bg-opacity-25" id="dayFour"></div>
-                        <div class="bg-success bg-opacity-25" id="dayFive"></div>                        
+                        <div class="bg-success bg-opacity-25" id="dayFive"></div>                         -->
                     </div>
                 </div>
         </section>
